--- a/css/styles.css
+++ b/css/styles.css
@@ -609,7 +609,7 @@ footer .social-media {
     color: var(--white-color);
 }
 
-.footer-form-input:focus {
+.footer-form-input:focus { 
   outline-width: 0;
   outline-color: transparent;
   outline-offset: 4px;
@@ -636,6 +636,10 @@ footer .social-media {
   font-weight: 500;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-btn-icon{
+  margin-left: 16px;
 }
 
 /* ========== /FOOTER ========== */
