--- a/css/styles.css
+++ b/css/styles.css
@@ -638,6 +638,11 @@ footer .social-media {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.footer-btn:hover,
+.footer-btn:focus {
+  background-color: var(--hover-color);  
+}
+
 .footer-btn-icon{
   margin-left: 16px;
 }
@@ -709,28 +714,21 @@ footer .social-media {
 /* ========== /MODAL WINDOW ========== */
 
 /* ================ MODAL FORM ================ */
-.contact-form-description {
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.32px;
-  color: var(--dark-color);
-  text-align: center;
-  margin-bottom: 16px;
-}
-
-.contact-form-field {
-  display: block;
+.contact-form-wraper{
   margin-bottom: 8px;
 }
 
-.contact-form-field-desc {
+.contact-form-field {
   font-size: 12px;
   font-weight: 400;
   line-height: 1.17;
-  letter-spacing: 0.48px;
+  letter-spacing: 0.04em;
   margin-bottom: 4px;
   color: var(--helper-text-color);
+  margin-bottom: 4px;
+  display: block;
 }
+
 
 .contact-form-input-wrapper {
   display: block;
