--- a/css/styles.css
+++ b/css/styles.css
@@ -718,6 +718,15 @@ footer .social-media {
   margin-bottom: 8px;
 }
 
+.contact-form-description{
+  font-weight: 500;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #2E2F42;
+  margin-bottom: 16px;
+}
+
 .contact-form-field {
   font-size: 12px;
   font-weight: 400;
@@ -743,6 +752,8 @@ footer .social-media {
   font-size: 18px;
   padding-left: 38px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: transparent;
+  outline: transparent;
 }
 
 .contact-form-input:focus {
