--- a/css/styles.css
+++ b/css/styles.css
@@ -722,6 +722,10 @@ footer .social-media {
   margin-bottom: 16px;
 }
 
+.contact-form-wraper-label{
+  margin-bottom: 24px;
+}
+
 .contact-form-description{
   font-weight: 500;
   line-height: 1.5;
@@ -789,6 +793,12 @@ footer .social-media {
   border: 1px solid rgba(46, 47, 66, 0.4);
   padding: 8px 16px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  outline: transparent;
+  
 }
 
 .contact-form-message:focus {
