--- a/css/styles.css
+++ b/css/styles.css
@@ -533,8 +533,8 @@ body {
 }
 
 .footer-form {
-display: flex;
-gap: 24px;
+  display: flex;
+  gap: 24px;
 }
 
 .page-footer .colored-logo {
@@ -601,15 +601,15 @@ footer .social-media {
   padding-left: 16px;
 }
 
-.subscribe-icon{
+.subscribe-icon {
   margin-left: 16px;
 }
 
-.footer-form-input::placeholder{
-    color: var(--white-color);
+.footer-form-input::placeholder {
+  color: var(--white-color);
 }
 
-.footer-form-input:focus { 
+.footer-form-input:focus {
   outline-width: 0;
   outline-color: transparent;
   outline-offset: 4px;
@@ -640,10 +640,10 @@ footer .social-media {
 
 .footer-btn:hover,
 .footer-btn:focus {
-  background-color: var(--hover-color);  
+  background-color: var(--hover-color);
 }
 
-.footer-btn-icon{
+.footer-btn-icon {
   margin-left: 16px;
 }
 
@@ -714,24 +714,24 @@ footer .social-media {
 /* ========== /MODAL WINDOW ========== */
 
 /* ================ MODAL FORM ================ */
-.contact-form-wraper{
+.contact-form-wraper {
   margin-bottom: 8px;
 }
 
-.contact-form-wraper-comment{
+.contact-form-wraper-comment {
   margin-bottom: 16px;
 }
 
-.contact-form-wraper-label{
+.contact-form-wraper-label {
   margin-bottom: 24px;
 }
 
-.contact-form-description{
+.contact-form-description {
   font-weight: 500;
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.02em;
-  color: #2E2F42;
+  color: #2e2f42;
   margin-bottom: 16px;
 }
 
@@ -745,7 +745,6 @@ footer .social-media {
   margin-bottom: 4px;
   display: block;
 }
-
 
 .contact-form-input-wrapper {
   display: block;
@@ -798,7 +797,6 @@ footer .social-media {
   color: rgba(46, 47, 66, 0.4);
   background-color: transparent;
   outline: transparent;
-  
 }
 
 .contact-form-message:focus {
@@ -816,9 +814,7 @@ footer .social-media {
 }
 
 .contact-form-checkbox-label {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
+  display: block;
   font-size: 12px;
   font-weight: 400;
   line-height: 1.17; /* 116.667% */
@@ -827,24 +823,29 @@ footer .social-media {
   margin-bottom: 24px;
 }
 
+.check-icon-wraper {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+}
+
 .contact-form-checkbox {
   position: absolute;
   appearance: none;
 }
 
-.contact-form-own-checkbox {
-  fill: transparent;
-  cursor: pointer;
-  border-radius: 4px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  margin-right: 8px;
-}
-
-.contact-form-checkbox:checked + .contact-form-own-checkbox {
-  background-color: #ffffff;
-  fill: #404bbf;
-  border: 1px solid #404bbf;
-  stroke: rgba(244, 244, 253, 1);
+.contact-form-checkbox:checked + .check-icon-wraper {
+  background-color: var(--hover-color);
+  border: none;
+  fill: var(--ligth-background-color)
 }
 
 .contact-form-checkbox:focus + .contact-form-own-checkbox {
@@ -873,6 +874,10 @@ footer .social-media {
 
 .contact-form-btn:hover,
 .contact-form-btn:focus {
-  background-color: var(--hover-color);  
+  background-color: var(--hover-color);
+}
+
+.privacy-link{
+  color: var(--active-color);
 }
 /* ================ /MODAL FORM ================ */
