--- a/css/styles.css
+++ b/css/styles.css
@@ -831,25 +831,20 @@ footer .social-media {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    fill: transparent;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
 }
 
-.contact-form-checkbox {
-  position: absolute;
-  appearance: none;
-}
 
-.contact-form-checkbox:checked + .check-icon-wraper {
+.contact-form-checkbox:checked
+  + .contact-form-checkbox-label
+  > .check-icon-wraper {
+  background-color: #404bbf;
   background-color: var(--hover-color);
   border: none;
-  fill: var(--ligth-background-color)
-}
-
-.contact-form-checkbox:focus + .contact-form-own-checkbox {
-  outline: 2px solid rgba(0, 0, 255, 0.5);
+  fill: var(--ligth-background-color);
 }
 
 .contact-form-btn {
@@ -877,7 +872,7 @@ footer .social-media {
   background-color: var(--hover-color);
 }
 
-.privacy-link{
+.privacy-link {
   color: var(--active-color);
 }
 /* ================ /MODAL FORM ================ */
