--- a/css/base/common.css
+++ b/css/base/common.css
@@ -51,3 +51,43 @@
     clip: rect(0 0 0 0);
     overflow: hidden;
   }
+
+
+.social-media {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+
+.social-media-items {
+  width: 40px;
+  height: 40px;
+}
+
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--white-color);
+  width: 100%;
+  height: 100%;
+  background-color: var(--active-color);
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-link:hover,
+.social-link:focus {
+  color: var(--ligth-background-color);
+  background-color: #404bbf;
+}
+
+.social-icon {
+  fill: currentColor;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
